main/default/objects/Epic__c/fields/Count_Closed__c.field-meta.xml
<CustomField>
    <fullName>Count_Closed__c</fullName>
    <label>Count Closed</label>
    <summaryFilterItems>
        <field>Work__c.Status__c</field>
        <operation>equals</operation>
        <value>Cancelled, Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Work__c.Epic__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>