main/default/objects/Epic__c/fields/Epic__c.field-meta.xml
<CustomField>
    <fullName>Epic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Epic</label>
    <referenceTo>Epic__c</referenceTo>
    <relationshipLabel>Child Epics</relationshipLabel>
    <relationshipName>Epics</relationshipName>
    <type>Lookup</type>
</CustomField>