main/default/objects/Epic__c/fields/Total_Work__c.field-meta.xml
<CustomField>
    <fullName>Total_Work__c</fullName>
    <label>Total Work</label>
    <summaryForeignKey>Work__c.Epic__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>